--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,4 @@
+
 #root {
   max-width: 1280px;
   margin: 0 auto;
@@ -43,3 +44,23 @@
 .no-bullets {
   list-style-type: none;
 }
+.justify-start{
+  justify-self: start;
+  align-items: start;
+  align-content: start;
+
+}
+h1{
+  text-shadow: #0b441055 4px 4px 0px;
+  text-decoration: bold;
+}
+h2{
+  text-shadow: #0b441055 3px 3px 0px;
+}
+h3{
+  text-shadow: #0b441055 2px 2px 0px;
+}
+.scale-up{
+  transform: scale(1.5);
+}
+.shadow-black{box-shadow: black 0px 0px 5px;}
