--- a/src/App.css
+++ b/src/App.css
@@ -1,9 +1,9 @@
 
 #root {
-  max-width: 1280px;
   margin: 0 auto;
   padding: 2rem;
   text-align: center;
+  background-image: linear-gradient(red, yellow, green);
 }
 
 .logo {
@@ -64,3 +64,20 @@ h3{
   transform: scale(1.5);
 }
 .shadow-black{box-shadow: black 0px 0px 5px;}
+
+.navbar{
+  border-radius: 10px; 
+}
+nav{
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  padding: 1rem;
+  border-radius: 10px;
+  box-shadow: 0px 0px 5px black;
+}
+.nav-item{
+  background-color: aqua;
+}
+  
+
