--- a/src/App.css
+++ b/src/App.css
@@ -3,7 +3,7 @@
   margin: 0 auto;
   padding: 2rem;
   text-align: center;
-  background-image: linear-gradient(red, yellow, green);
+  background-image: linear-gradient(blue, orange, green);
 }
 
 .logo {
@@ -63,7 +63,7 @@ h3{
 .scale-up{
   transform: scale(1.5);
 }
-.shadow-black{box-shadow: black 0px 0px 5px;}
+.shadow-black{box-shadow: black 0px 0px 3px;}
 
 .navbar{
   border-radius: 10px; 
@@ -76,8 +76,16 @@ nav{
   border-radius: 10px;
   box-shadow: 0px 0px 5px black;
 }
-.nav-item{
-  background-color: aqua;
+.gradient{
+  background-image: linear-gradient(silver, gray, rgb(57, 55, 55));
 }
+.nav-item :hover{
+  background-color: #0b4410;
+  color: white;
+  border-radius: 10px;
+  box-shadow: 0px 0px 5px black;
+}
+.header-title{
+  color: silver;
   
-
+}
