--- a/src/App.css
+++ b/src/App.css
@@ -87,5 +87,18 @@ nav{
 }
 .header-title{
   color: silver;
-  
+
+}
+.justify-left{
+  position: relative;
+  justify-self: start;
+  align-items: start;
+  align-content: start;
+  transform-origin: left;
+}
+.scale-down{
+  transform: scale(0.5);
+}
+.force-left{
+  position: absolute;
 }
