--- a/src/App.css
+++ b/src/App.css
@@ -1,9 +1,12 @@
 
 #root {
+  display:flex;
+  flex-direction: column;
   margin: 0 auto;
   padding: 2rem;
   text-align: center;
   background-image: linear-gradient(lightblue 10%, orange 30%, green 40%);
+  height: 100%;
 }
 
 .logo {
@@ -56,6 +59,10 @@ h2{
 }
 h3{
   text-shadow: #0b441055 2px 2px 0px;
+}
+li{
+  text-shadow: #0b441055 1px 1px 0px;
+  margin: auto;
 }
 .scale-up{
   transform: scale(1.5);
@@ -150,5 +157,18 @@ header{
 }
 
 .margin-1{
+  margin: 1rem;
+}
+.fill-page{
+  min-height: 100%;
+  min-width: 100%;
+  height: auto;
+}
+.big-div{
+  min-height: 30rem;
+}
+.img-formatted{
+  border-radius: 10px;
+  box-shadow: 0px 0px 5px black;
   margin: 1rem;
 }
